--- a/copy-paste/index.html
+++ b/copy-paste/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <div><h1>Copy Paste</h1></div>
-    <textarea name="content" id="content" cols="30" rows="10"></textarea>
+    <textarea name="content" id="content" cols="30" rows="10"></textarea><br>
     <button id="btn">copy here</button>
     <p id="output"></p>
-    <p id="data-outout"></p>
+    <p id="data-outout"></p><br><br><br>
+    <button id="btnp">paste here</button><br>
     <textarea name="paste" id="paste" cols="30" rows="10"></textarea>
 
     <script src="index.js"></script>
