--- a/copy-paste/index.html
+++ b/copy-paste/index.html
@@ -11,7 +11,8 @@
     <button id="btn">copy here</button>
     <p id="output"></p>
     <p id="data-outout"></p><br><br><br>
-    <button id="btnp">paste here</button><br>
+    <button id="btnp">paste here</button>
+    <button id="btnn">paste new</button><br>
     <textarea name="paste" id="paste" cols="30" rows="10"></textarea>
 
     <script src="index.js"></script>
