--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -22,7 +22,7 @@
     </div>
     <div class="done-outbox">
         <h3>Work done</h3><br>
-        <button id="clear-done">clear done</button>
+        <button id="clear-done">clear tasks</button>
         <ul class="done-list" id="done-list"></ul>
     </div>
     </div>
